# c8y-test-core

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
c8y_test_core/: __init__.py  assert_alarms.py  assert_availability.py  assert_binaries.py  assert_command.py  assert_configuration.py  assert_device.py  assert_device_certificate.py  assert_device_profile.py  assert_device_registration.py  assert_events.py  assert_firmware.py  assert_identity.py  assert_inventory.py  assert_logfile.py  assert_measurements.py  assert_operation.py  assert_operations.py  assert_smartrest2.py  assert_software_management.py  c8y.py  compare.py  context.py  device_management.py  models.py  proc_utils.py  realtime.py  retry.py  task.py  timer.py  utils.py
tests/: fixtures.py  test_compare.py  test_software.py  test_utils.py
