[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "c8y-test-core"
version = "0.0.1"
description = "Core test library for Cumulocity IoT"
license = "MPL-2.0"
authors = [
    "Reuben Miller <reuben.d.miller@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/reubenmiller/c8y_test_core"
repository = "https://github.com/reubenmiller/c8y_test_core"
keywords = [
    "cumulocity",
    "iot",
    "qa"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
packages = [
    { include = "c8y_test_core" },
]
include = [
    { path = "testing", format = "sdist" },
    { path = "docs", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.7.2"
requests = "^2.26.0"
c8y-api = "^1.4"
jwt = "^1.3.1"
python-dotenv = "^0.20.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
tox = "^3.24.5"
pre-commit = "^2.17.0"
pylint = "^2.14.3"
poetry2setup = "^1.0.0"
