[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "c8y_test_core/_version.py"

[project]
name = "c8y_test_core"
description = "Core test library for Cumulocity IoT"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["CumulocityIoT", "testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "c8y-api >= 1.5, < 1.6",
    "jwt >= 1.3.1, < 1.4.0",
    "python-dotenv >= 0.20.0, < 0.21.0",
    "pyyaml >= 6.0, < 7.0",
    "requests >= 2.28.1, < 2.29.0",
    "tenacity >= 8.1.0, < 8.2.0",
    "randomname >= 0.1.5, < 0.2.0",
    "importlib-metadata >= 6.0.0, < 7.0.0; python_version<'3.8'",
]
