[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "c8y_test_core/_version.py"

[project]
name = "c8y_test_core"
description = "Core test library for Cumulocity IoT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["CumulocityIoT", "testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "c8y-api >= 1.10, < 1.11",
    "python-dotenv >= 1.0.0, < 1.1.0",
    "pyyaml >= 6.0, < 7.0",
    "requests >= 2.31.0, < 2.32.0",
    "tenacity >= 8.1.0, < 8.2.0",
    "randomname >= 0.1.5, < 0.2.0",
]
